# pear.ng

./: README.md
desktop/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
desktop/modules/net_tcp/: CMakeLists.txt  tcp_socket.h  tcp_socket_posix.cc  tcp_socket_win.cc
desktop/modules/screen_capture/: CMakeLists.txt  capture_frame.cc  capture_frame.h  capture_source.h  screen_capturer.cc  screen_capturer.h  source_watcher.cc  source_watcher.h
desktop/modules/screen_capture/mac/: screen_capturer_mac.cc  screen_capturer_mac.h  source_watcher_mac.cc  window_capturer_mac.cc  window_capturer_mac.h
desktop/modules/screen_capture/win/: gdi_screen_capturer.cc  gdi_screen_capturer.h  gdi_window_capturer.cc  gdi_window_capturer.h  source_watcher_win.cc
proxy/: package-lock.json  package.json  tcp_ws_proxy.js
web/: index.html
